Compare original and revised text

--- a/correction/templates/show_correction.html
+++ b/correction/templates/show_correction.html
@@ -28,6 +28,14 @@
                         {% else %}
                         <div>
                             {{ correction.correction|render_markdown }}
+                            {% if comparison %}
+                                <div>
+                                <h2>Comparison of revised and original text</h2>
+                                {% autoescape off %}
+                                    {{ comparison }}
+                                {% endautoescape %}
+                            </div>
+                            {% endif %}
                         </div>
                         {% endif %}
                     </div>
