--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -64,16 +64,16 @@
 <!-- Volt CSS -->
 <link type="text/css" href="/static/assets/css/volt.css" rel="stylesheet">
 
-  <style>
-    .modal-content {
-      border-radius: 10px;
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-      color: white;
-    }
-    .modal-header, .modal-footer {
-      border: none;
-    }
-  </style>
+{#  <style>#}
+{#    .modal-content {#}
+{#      border-radius: 10px;#}
+{#      background: linear-gradient(135deg, #6a11cb, #2575fc);#}
+{#      color: white;#}
+{#    }#}
+{#    .modal-header, .modal-footer {#}
+{#      border: none;#}
+{#    }#}
+{#  </style>#}
 
     <!-- Specific Page CSS goes HERE  -->
     {% block stylesheets %}{% endblock stylesheets %}
