Add subscription code registration support

--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -96,6 +96,7 @@
                                         </div>
                                         
                                     </div>
+                                    <input type="hidden" name="subscription_code" value="{{ subscription_code }}">
                                     <button type="submit" name="register" class="btn btn-block btn-primary">Sign IN</button>
                                 </form>
 
